--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- For IE -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>mark.pcnewnew.ca</title>
+		<title>Mark Wiens, Liberal Party Candidate for Vancouver East</title>
 		<meta name='robots' content='max-image-preview:large' />
 		<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 		<link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
