Link phone number and email address

--- a/public/index.html
+++ b/public/index.html
@@ -337,7 +337,7 @@
 							<div class="elementor-widget-container">
 								<p style="font-family: 'Oswald', sans-serif; font-size: 18px; color: white;"><br></p>
 								<p style="font-family: 'Oswald', sans-serif; font-size: 18px; color: white;"><br></p>
-								<p style="font-family: 'Oswald', sans-serif; font-size: 18px; color: white;">Phone:  604-977-2688<br>Email:&nbsp; Hello@votemarkwiens.ca</p>								</div>
+								<p style="font-family: 'Oswald', sans-serif; font-size: 18px; color: white;">Phone:  <a href="tel:+16049772688" style="color: inherit">604-977-2688</a><br>Email:&nbsp; <a href="mailto:hello@votemarkwiens.ca" style="color: inherit">hello@votemarkwiens.ca</a></p>								</div>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-80a5e93 e-con-full e-flex e-con e-child" data-id="80a5e93" data-element_type="container">
