--- a/public/index.html
+++ b/public/index.html
@@ -249,8 +249,85 @@
 								<div class="fluentform-widget-wrapper hide-fluent-form-labels fluentform-widget-align-default">
 
 
-									<div class='fluentform ff-default fluentform_wrapper_4 ffs_default_wrap'><form data-form_id="4" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST" ><fieldset  style="border: none!important;margin: 0!important;padding: 0!important;background-color: transparent!important;box-shadow: none!important;outline: none!important; min-inline-size: 100%;">
-												<legend class="ff_screen_reader_title" style="display: block; margin: 0!important;padding: 0!important;height: 0!important;text-indent: -999999px;width: 0!important;overflow:hidden;">Join Team</legend><input type='hidden' name='__fluent_form_embded_post_id' value='698' /><input type="hidden" id="_fluentform_4_fluentformnonce" name="_fluentform_4_fluentformnonce" value="e938067547" /><input type="hidden" name="_wp_http_referer" value="/" /><div class='ff-el-group'><div class="ff-el-input--label ff-el-is-required asterisk-right"><label for='ff_4_email' aria-label="Email">Email</label></div><div class='ff-el-input--content'><input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" data-name="email"  aria-invalid="false" aria-required=true></div></div><div data-type="name-element" data-name="names" class=" ff-field_container ff-name-field-wrapper" ><div class='ff-t-container'><div class='ff-t-cell '><div class='ff-el-group'><div class="ff-el-input--label asterisk-right"><label for='ff_4_names_first_name_' >First Name</label></div><div class='ff-el-input--content'><input type="text" name="names[first_name]" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false></div></div></div><div class='ff-t-cell '><div class='ff-el-group'><div class="ff-el-input--label asterisk-right"><label for='ff_4_names_last_name_' >Last Name</label></div><div class='ff-el-input--content'><input type="text" name="names[last_name]" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false></div></div></div></div></div><div class='ff-el-group'><div class="ff-el-input--label asterisk-right"><label for='ff_4_subject' aria-label="Phone">Phone</label></div><div class='ff-el-input--content'><input type="text" name="subject" class="ff-el-form-control" placeholder="Phone" data-name="subject" id="ff_4_subject"  aria-invalid="false" aria-required=false></div></div><div class='ff-el-group'><div class="ff-el-input--label asterisk-right"><label for='ff_4_subject_1' aria-label="Postal Code">Postal Code</label></div><div class='ff-el-input--content'><input type="text" name="subject_1" class="ff-el-form-control" placeholder="Postal Code" data-name="subject_1" id="ff_4_subject_1"  aria-invalid="false" aria-required=false></div></div><div class='ff-el-group'><div class="ff-el-input--label asterisk-right"><label for='ff_4_dropdown' aria-label="Position">Position</label></div><div class='ff-el-input--content'><select name="dropdown" id="ff_4_dropdown" class="ff-el-form-control" data-name="dropdown" data-calc_value="0"  aria-invalid="false" aria-required=false><option value="">- Select -</option><option value="Door knocking"  >Door knocking</option><option value="Phone Banking"  >Phone Banking</option><option value="Sign Placement"  >Sign Placement</option><option value="I&#039;m interested in a Leadership Position"  >I'm interested in a Leadership Position</option></select></div></div><div class='ff-el-group ff-text-left ff_submit_btn_wrapper'><button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style" >Join My Team!</button></div></fieldset></form><div id='fluentform_4_errors' class='ff-errors-in-stack ff_form_instance_4_1 ff-form-loading_errors ff_form_instance_4_1_errors'></div></div>
+									<div class='fluentform ff-default fluentform_wrapper_4 ffs_default_wrap'>
+										<form netlify data-form_id="4" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST" >
+											<fieldset  style="border: none!important;margin: 0!important;padding: 0!important;background-color: transparent!important;box-shadow: none!important;outline: none!important; min-inline-size: 100%;">
+												<legend class="ff_screen_reader_title" style="display: block; margin: 0!important;padding: 0!important;height: 0!important;text-indent: -999999px;width: 0!important;overflow:hidden;">
+													Join Team
+												</legend>
+												<input type='hidden' name='__fluent_form_embded_post_id' value='698' />
+												<input type="hidden" id="_fluentform_4_fluentformnonce" name="_fluentform_4_fluentformnonce" value="e938067547" />
+												<input type="hidden" name="_wp_http_referer" value="/" />
+												<div class='ff-el-group'>
+													<div class="ff-el-input--label ff-el-is-required asterisk-right">
+														<label for='ff_4_email' aria-label="Email">Email</label>
+													</div>
+													<div class='ff-el-input--content'>
+														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" data-name="email"  aria-invalid="false" aria-required=true>
+													</div>
+												</div>
+												<div data-type="name-element" data-name="names" class=" ff-field_container ff-name-field-wrapper" >
+													<div class='ff-t-container'>
+														<div class='ff-t-cell '>
+															<div class='ff-el-group'>
+																<div class="ff-el-input--label asterisk-right">
+																	<label for='ff_4_names_first_name_' >First Name</label>
+																</div>
+																<div class='ff-el-input--content'>
+																	<input type="text" name="names[first_name]" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false>
+																</div>
+															</div>
+														</div>
+														<div class='ff-t-cell '>
+															<div class='ff-el-group'>
+																<div class="ff-el-input--label asterisk-right">
+																	<label for='ff_4_names_last_name_' >Last Name</label>
+																</div>
+																<div class='ff-el-input--content'>
+																	<input type="text" name="names[last_name]" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class='ff-el-group'>
+													<div class="ff-el-input--label asterisk-right">
+														<label for='ff_4_subject' aria-label="Phone">Phone</label>
+													</div>
+													<div class='ff-el-input--content'>
+														<input type="text" name="subject" class="ff-el-form-control" placeholder="Phone" data-name="subject" id="ff_4_subject"  aria-invalid="false" aria-required=false>
+													</div>
+												</div>
+												<div class='ff-el-group'>
+													<div class="ff-el-input--label asterisk-right">
+														<label for='ff_4_subject_1' aria-label="Postal Code">Postal Code</label>
+													</div>
+													<div class='ff-el-input--content'>
+														<input type="text" name="subject_1" class="ff-el-form-control" placeholder="Postal Code" data-name="subject_1" id="ff_4_subject_1"  aria-invalid="false" aria-required=false>
+													</div>
+												</div>
+												<div class='ff-el-group'>
+													<div class="ff-el-input--label asterisk-right">
+														<label for='ff_4_dropdown' aria-label="Position">Position</label>
+													</div>
+													<div class='ff-el-input--content'>
+														<select name="dropdown" id="ff_4_dropdown" class="ff-el-form-control" data-name="dropdown" data-calc_value="0"  aria-invalid="false" aria-required=false>
+															<option value="">- Select -</option>
+															<option value="Door knocking"  >Door knocking</option>
+															<option value="Phone Banking"  >Phone Banking</option>
+															<option value="Sign Placement"  >Sign Placement</option>
+															<option value="I&#039;m interested in a Leadership Position"  >I'm interested in a Leadership Position</option>
+														</select>
+													</div>
+												</div>
+												<div class='ff-el-group ff-text-left ff_submit_btn_wrapper'>
+													<button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style" >Join My Team!</button>
+												</div>
+											</fieldset>
+										</form>
+										<div id='fluentform_4_errors' class='ff-errors-in-stack ff_form_instance_4_1 ff-form-loading_errors ff_form_instance_4_1_errors'>
+										</div>
+									</div>
 								</div>
 
 							</div>
