Prepare form for Netlify

--- a/public/index.html
+++ b/public/index.html
@@ -250,23 +250,20 @@
 
 
 									<div class='fluentform ff-default fluentform_wrapper_4 ffs_default_wrap'>
-										<form netlify data-form_id="4" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST" >
+										<form netlify name="join-my-team" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST" >
 											<fieldset  style="border: none!important;margin: 0!important;padding: 0!important;background-color: transparent!important;box-shadow: none!important;outline: none!important; min-inline-size: 100%;">
 												<legend class="ff_screen_reader_title" style="display: block; margin: 0!important;padding: 0!important;height: 0!important;text-indent: -999999px;width: 0!important;overflow:hidden;">
 													Join Team
 												</legend>
-												<input type='hidden' name='__fluent_form_embded_post_id' value='698' />
-												<input type="hidden" id="_fluentform_4_fluentformnonce" name="_fluentform_4_fluentformnonce" value="e938067547" />
-												<input type="hidden" name="_wp_http_referer" value="/" />
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label ff-el-is-required asterisk-right">
 														<label for='ff_4_email' aria-label="Email">Email</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" data-name="email"  aria-invalid="false" aria-required=true>
+														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" aria-invalid="false" aria-required=true autoComplete="email">
 													</div>
 												</div>
-												<div data-type="name-element" data-name="names" class=" ff-field_container ff-name-field-wrapper" >
+												<div class=" ff-field_container ff-name-field-wrapper" >
 													<div class='ff-t-container'>
 														<div class='ff-t-cell '>
 															<div class='ff-el-group'>
@@ -274,7 +271,7 @@
 																	<label for='ff_4_names_first_name_' >First Name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="names[first_name]" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false>
+																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false autoComplete="given-name">
 																</div>
 															</div>
 														</div>
@@ -284,7 +281,7 @@
 																	<label for='ff_4_names_last_name_' >Last Name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="names[last_name]" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false>
+																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false autoComplete="family-name">
 																</div>
 															</div>
 														</div>
@@ -295,7 +292,7 @@
 														<label for='ff_4_subject' aria-label="Phone">Phone</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="text" name="subject" class="ff-el-form-control" placeholder="Phone" data-name="subject" id="ff_4_subject"  aria-invalid="false" aria-required=false>
+														<input type="text" name="tel" class="ff-el-form-control" placeholder="Phone" id="ff_4_subject"  aria-invalid="false" aria-required=false autoComplete="tel">
 													</div>
 												</div>
 												<div class='ff-el-group'>
@@ -303,7 +300,7 @@
 														<label for='ff_4_subject_1' aria-label="Postal Code">Postal Code</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="text" name="subject_1" class="ff-el-form-control" placeholder="Postal Code" data-name="subject_1" id="ff_4_subject_1"  aria-invalid="false" aria-required=false>
+														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  aria-invalid="false" aria-required=false autoComplete="postal-code">
 													</div>
 												</div>
 												<div class='ff-el-group'>
@@ -311,8 +308,8 @@
 														<label for='ff_4_dropdown' aria-label="Position">Position</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<select name="dropdown" id="ff_4_dropdown" class="ff-el-form-control" data-name="dropdown" data-calc_value="0"  aria-invalid="false" aria-required=false>
-															<option value="">- Select -</option>
+														<select name="subject" id="ff_4_dropdown" class="ff-el-form-control" aria-invalid="false" aria-required=false>
+															<option value="" selected disabled>- Select -</option>
 															<option value="Door knocking"  >Door knocking</option>
 															<option value="Phone Banking"  >Phone Banking</option>
 															<option value="Sign Placement"  >Sign Placement</option>
