--- a/public/index.html
+++ b/public/index.html
@@ -108,8 +108,8 @@
 									<nav aria-label="Menu" class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-underline e--animation-fade">
 										<ul id="menu-1-5c3150d" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#meet" class="elementor-item elementor-item-anchor">Meet Mark</a></li>
 											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-703"><a href="#Why" class="elementor-item elementor-item-anchor">Why Mark?</a></li>
-											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-704"><a href="#get" class="elementor-item elementor-item-anchor">Get Involved</a></li>
-											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-705"><a href="https://secure.liberal.ca/lawn-sign?campID=7015b000002CKIsAAO&#038;eda=35048" class="elementor-item">Request a Sign</a></li>
+											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-704"><a href="#get" class="elementor-item elementor-item-anchor">Get involved</a></li>
+											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-705"><a href="https://secure.liberal.ca/lawn-sign?campID=7015b000002CKIsAAO&#038;eda=35048" class="elementor-item">Request a sign</a></li>
 											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-706"><a href="https://secure.liberal.ca/eda?utm_source=secure.liberal.ca--victoryfund&#038;utm_medium=donation-switch&#038;utm_content=make-this-one-time-gift&#038;campidVOID=7015b000002D7M8AAK&#038;campid=7015b000002D7MIAA0&#038;sponsorContactId=003j000000UsWkyAAF&#038;eda=59036" class="elementor-item">Donate</a></li>
 											<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-707"><a href="#footer" class="elementor-item elementor-item-anchor">Contact</a></li>
 										</ul>			</nav>
@@ -118,8 +118,8 @@
 										<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
 											<ul id="menu-2-5c3150d" class="elementor-nav-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#meet" class="elementor-item elementor-item-anchor" tabindex="-1">Meet Mark</a></li>
 												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-703"><a href="#Why" class="elementor-item elementor-item-anchor" tabindex="-1">Why Mark?</a></li>
-												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-704"><a href="#get" class="elementor-item elementor-item-anchor" tabindex="-1">Get Involved</a></li>
-												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-705"><a href="https://secure.liberal.ca/lawn-sign?campID=7015b000002CKIsAAO&#038;eda=35048" class="elementor-item" tabindex="-1">Request a Sign</a></li>
+												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-704"><a href="#get" class="elementor-item elementor-item-anchor" tabindex="-1">Get involved</a></li>
+												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-705"><a href="https://secure.liberal.ca/lawn-sign?campID=7015b000002CKIsAAO&#038;eda=35048" class="elementor-item" tabindex="-1">Request a sign</a></li>
 												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-706"><a href="https://secure.liberal.ca/eda?utm_source=secure.liberal.ca--victoryfund&#038;utm_medium=donation-switch&#038;utm_content=make-this-one-time-gift&#038;campidVOID=7015b000002D7M8AAK&#038;campid=7015b000002D7MIAA0&#038;sponsorContactId=003j000000UsWkyAAF&#038;eda=59036" class="elementor-item" tabindex="-1">Donate</a></li>
 												<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-707"><a href="#footer" class="elementor-item elementor-item-anchor" tabindex="-1">Contact</a></li>
 											</ul>			</nav>
@@ -268,7 +268,7 @@
 														<div class='ff-t-cell '>
 															<div class='ff-el-group'>
 																<div class="ff-el-input--label asterisk-right">
-																	<label for='ff_4_names_first_name_' >First Name</label>
+																	<label for='ff_4_names_first_name_' >First name</label>
 																</div>
 																<div class='ff-el-input--content'>
 																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false autoComplete="given-name">
@@ -278,7 +278,7 @@
 														<div class='ff-t-cell '>
 															<div class='ff-el-group'>
 																<div class="ff-el-input--label asterisk-right">
-																	<label for='ff_4_names_last_name_' >Last Name</label>
+																	<label for='ff_4_names_last_name_' >Last name</label>
 																</div>
 																<div class='ff-el-input--content'>
 																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false autoComplete="family-name">
@@ -297,7 +297,7 @@
 												</div>
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label asterisk-right">
-														<label for='ff_4_subject_1' aria-label="Postal Code">Postal Code</label>
+														<label for='ff_4_subject_1' aria-label="Postal Code">Postal code</label>
 													</div>
 													<div class='ff-el-input--content'>
 														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  aria-invalid="false" aria-required=false autoComplete="postal-code">
@@ -309,16 +309,16 @@
 													</div>
 													<div class='ff-el-input--content'>
 														<select name="subject" id="ff_4_dropdown" class="ff-el-form-control" aria-invalid="false" aria-required=false>
-															<option value="" selected disabled>- Select -</option>
+															<option value="" selected disabled>– Select –</option>
 															<option value="Door knocking"  >Door knocking</option>
-															<option value="Phone Banking"  >Phone Banking</option>
-															<option value="Sign Placement"  >Sign Placement</option>
-															<option value="I&#039;m interested in a Leadership Position"  >I'm interested in a Leadership Position</option>
+															<option value="Phone banking"  >Phone banking</option>
+															<option value="Sign placement"  >Sign placement</option>
+															<option value="I&#039;m interested in a leadership position"  >I'm interested in a leadership position</option>
 														</select>
 													</div>
 												</div>
 												<div class='ff-el-group ff-text-left ff_submit_btn_wrapper'>
-													<button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style" >Join My Team!</button>
+													<button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style" >Join my team!</button>
 												</div>
 											</fieldset>
 										</form>
@@ -336,7 +336,7 @@
 						<div class="elementor-element elementor-element-03bdee1 e-con-full e-flex e-con e-child" data-id="03bdee1" data-element_type="container">
 							<div class="elementor-element elementor-element-b457e79 elementor-widget elementor-widget-heading" data-id="b457e79" data-element_type="widget" data-widget_type="heading.default">
 								<div class="elementor-widget-container">
-									<h1 class="elementor-heading-title elementor-size-default">Request a Sign</h1>				</div>
+									<h1 class="elementor-heading-title elementor-size-default">Request a sign</h1>				</div>
 							</div>
 						</div>
 						<div class="elementor-element elementor-element-8a69ac7 e-con-full e-flex e-con e-child" data-id="8a69ac7" data-element_type="container">
@@ -350,7 +350,7 @@
 									<div class="elementor-button-wrapper">
 										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://secure.liberal.ca/lawn-sign?campID=7015b000002CKIsAAO&#038;eda=35048">
 											<span class="elementor-button-content-wrapper">
-												<span class="elementor-button-text">Request a Sign! </span>
+												<span class="elementor-button-text">Request a sign! </span>
 											</span>
 										</a>
 									</div>
