Set certain fields as required

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
 														<label for='ff_4_email' aria-label="Email">Email</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" aria-invalid="false" aria-required=true autoComplete="email">
+														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" required autoComplete="email">
 													</div>
 												</div>
 												<div class=" ff-field_container ff-name-field-wrapper" >
@@ -273,7 +273,7 @@
 																	<label for='ff_4_names_first_name_' >First name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" aria-invalid="false" aria-required=false autoComplete="given-name">
+																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" required autoComplete="given-name">
 																</div>
 															</div>
 														</div>
@@ -283,7 +283,7 @@
 																	<label for='ff_4_names_last_name_' >Last name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" aria-invalid="false" aria-required=false autoComplete="family-name">
+																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" required autoComplete="family-name">
 																</div>
 															</div>
 														</div>
@@ -294,7 +294,7 @@
 														<label for='ff_4_subject' aria-label="Phone">Phone</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="text" name="tel" class="ff-el-form-control" placeholder="Phone" id="ff_4_subject"  aria-invalid="false" aria-required=false autoComplete="tel">
+														<input type="text" name="tel" class="ff-el-form-control" placeholder="Phone" id="ff_4_subject"  autoComplete="tel">
 													</div>
 												</div>
 												<div class='ff-el-group'>
@@ -302,7 +302,7 @@
 														<label for='ff_4_subject_1' aria-label="Postal Code">Postal code</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  aria-invalid="false" aria-required=false autoComplete="postal-code">
+														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  autoComplete="postal-code">
 													</div>
 												</div>
 												<div class='ff-el-group'>
@@ -310,7 +310,7 @@
 														<label for='ff_4_dropdown' aria-label="Position">Position</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<select name="area-of-interest" id="ff_4_dropdown" class="ff-el-form-control" aria-invalid="false" aria-required=false>
+														<select name="area-of-interest" id="ff_4_dropdown" class="ff-el-form-control" required>
 															<option value="" selected disabled>– Select –</option>
 															<option value="Door knocking"  >Door knocking</option>
 															<option value="Phone banking"  >Phone banking</option>
