Remove unneeded aria attributes

--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
 												</legend>
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label ff-el-is-required asterisk-right">
-														<label for='ff_4_email' aria-label="Email">Email</label>
+														<label for='ff_4_email'>Email</label>
 													</div>
 													<div class='ff-el-input--content'>
 														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" required autoComplete="email">
@@ -291,7 +291,7 @@
 												</div>
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label asterisk-right">
-														<label for='ff_4_subject' aria-label="Phone">Phone</label>
+														<label for='ff_4_subject'>Phone</label>
 													</div>
 													<div class='ff-el-input--content'>
 														<input type="text" name="tel" class="ff-el-form-control" placeholder="Phone" id="ff_4_subject"  autoComplete="tel">
@@ -299,7 +299,7 @@
 												</div>
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label asterisk-right">
-														<label for='ff_4_subject_1' aria-label="Postal Code">Postal code</label>
+														<label for='ff_4_subject_1'>Postal code</label>
 													</div>
 													<div class='ff-el-input--content'>
 														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  autoComplete="postal-code">
