--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@
 
 
 									<div class='fluentform ff-default fluentform_wrapper_4 ffs_default_wrap'>
-										<form netlify netlify-honeypot="truly-important-information" name="join-my-team" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST" >
+										<form netlify netlify-honeypot="truly-important-information" name="join-my-team" id="fluentform_4" class="frm-fluent-form fluent_form_4 ff-el-form-top ff_form_instance_4_1 ff-form-loading ffs_default" method="POST">
 											<fieldset  style="border: none!important;margin: 0!important;padding: 0!important;background-color: transparent!important;box-shadow: none!important;outline: none!important; min-inline-size: 100%;">
 												<legend class="ff_screen_reader_title" style="display: block; margin: 0!important;padding: 0!important;height: 0!important;text-indent: -999999px;width: 0!important;overflow:hidden;">
 													Join Team
@@ -265,12 +265,12 @@
 														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" required autoComplete="email">
 													</div>
 												</div>
-												<div class=" ff-field_container ff-name-field-wrapper" >
+												<div class=" ff-field_container ff-name-field-wrapper">
 													<div class='ff-t-container'>
 														<div class='ff-t-cell '>
 															<div class='ff-el-group'>
 																<div class="ff-el-input--label asterisk-right">
-																	<label for='ff_4_names_first_name_' >First name</label>
+																	<label for='ff_4_names_first_name_'>First name</label>
 																</div>
 																<div class='ff-el-input--content'>
 																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" required autoComplete="given-name">
@@ -280,7 +280,7 @@
 														<div class='ff-t-cell '>
 															<div class='ff-el-group'>
 																<div class="ff-el-input--label asterisk-right">
-																	<label for='ff_4_names_last_name_' >Last name</label>
+																	<label for='ff_4_names_last_name_'>Last name</label>
 																</div>
 																<div class='ff-el-input--content'>
 																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" required autoComplete="family-name">
@@ -307,15 +307,15 @@
 												</div>
 												<div class='ff-el-group'>
 													<div class="ff-el-input--label asterisk-right">
-														<label for='ff_4_dropdown' aria-label="Position">Position</label>
+														<label for='ff_4_dropdown'>Position</label>
 													</div>
 													<div class='ff-el-input--content'>
 														<select name="area-of-interest" id="ff_4_dropdown" class="ff-el-form-control" required>
 															<option value="" selected disabled>– Select –</option>
-															<option value="Door knocking"  >Door knocking</option>
-															<option value="Phone banking"  >Phone banking</option>
-															<option value="Sign placement"  >Sign placement</option>
-															<option value="I&#039;m interested in a leadership position"  >I'm interested in a leadership position</option>
+															<option value="Door knocking">Door knocking</option>
+															<option value="Phone banking">Phone banking</option>
+															<option value="Sign placement">Sign placement</option>
+															<option value="I&#039;m interested in a leadership position">I'm interested in a leadership position</option>
 														</select>
 													</div>
 												</div>
@@ -326,7 +326,7 @@
 													</label>
 												</div>
 												<div class='ff-el-group ff-text-left ff_submit_btn_wrapper'>
-													<button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style" >Join my team!</button>
+													<button type="submit" class="ff-btn ff-btn-submit ff-btn-lg ff_btn_style">Join my team!</button>
 												</div>
 											</fieldset>
 										</form>
