Add "other" option

--- a/public/index.html
+++ b/public/index.html
@@ -316,6 +316,7 @@
 															<option value="Phone banking">Phone banking</option>
 															<option value="Sign placement">Sign placement</option>
 															<option value="I&#039;m interested in a leadership position">I'm interested in a leadership position</option>
+															<option value="Other">Other</option>
 														</select>
 													</div>
 												</div>
