--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
 														<label for='ff_4_email'>Email</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email Address" required autoComplete="email">
+														<input type="email" name="email" id="ff_4_email" class="ff-el-form-control" placeholder="Email address" required autoComplete="email">
 													</div>
 												</div>
 												<div class=" ff-field_container ff-name-field-wrapper">
@@ -273,7 +273,7 @@
 																	<label for='ff_4_names_first_name_'>First name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First Name" required autoComplete="given-name">
+																	<input type="text" name="given-name" id="ff_4_names_first_name_" class="ff-el-form-control" placeholder="First name" required autoComplete="given-name">
 																</div>
 															</div>
 														</div>
@@ -283,7 +283,7 @@
 																	<label for='ff_4_names_last_name_'>Last name</label>
 																</div>
 																<div class='ff-el-input--content'>
-																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last Name" required autoComplete="family-name">
+																	<input type="text" name="family-name" id="ff_4_names_last_name_" class="ff-el-form-control" placeholder="Last name" required autoComplete="family-name">
 																</div>
 															</div>
 														</div>
@@ -302,7 +302,7 @@
 														<label for='ff_4_subject_1'>Postal code</label>
 													</div>
 													<div class='ff-el-input--content'>
-														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal Code" id="ff_4_subject_1"  autoComplete="postal-code">
+														<input type="text" name="postal-code" class="ff-el-form-control" placeholder="Postal code" id="ff_4_subject_1"  autoComplete="postal-code">
 													</div>
 												</div>
 												<div class='ff-el-group'>
